Added second panel

--- a/Landing.html
+++ b/Landing.html
@@ -17,17 +17,36 @@
         </ul> 
 
     </div>
-    <div class="one">
-        <div class="content">
+    <div class="content one">
             <div class="content-one-container">
-                <div class="title-font"> This Website is awesome</div>
+                <div class="title-font-one"> This Website is awesome</div>
                 <div class="subtext"> This website has some subtext that goes here under
                     the main title. It's smaller font and the color is lower contrast</div>
                 <div class="button"><a href="../Landing.html"> Sign up</a></div>
             </div>
-            <img src="route/file" alt="this is a placeholder for an image" class="image">
-        </div>
+            <img src="route/file" alt="this is a placeholder for an image" class="image-one">
      </div>
+    <div class="content two">
+        <div class="title-font-two"> Some random information.</div>
+        <div class="content-two-container">
+            <div class="illustration">
+                <img src="route/file" alt="" class="image-two">
+                <div class="subtext center-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="illustration">
+                <img src="route/file" alt="" class="image-two">
+                <div class="subtext center-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="illustration">
+                <img src="route/file" alt="" class="image-two">
+                <div class="subtext center-text">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="illustration">
+                <img src="route/file" alt="" class="image-two">
+                <div class="subtext center-text">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
