--- a/Landing.html
+++ b/Landing.html
@@ -48,13 +48,22 @@
         </div>
     </div>
     <div class="content three">
-        <div class="quotation">
+        <div class="content-three-container">
             <div class="quote"> This is an inspiring quote, or a testimonial from a customer.
                 Maybe it's just filling up space, or maybe people will actually read it. 
                 Who knows? All I know is that it looks nice.</div>
             <div class="author">-Thor, God of Thunder</div>
         </div>
     </div>
-    
+    <div class="content four">
+        <div class="content-four-container">
+            <div class="text-four">
+                <div class="title-font-four">Call to action! It's time!</div>
+                <div class="subtext-four">Sign up for our product by clicking that button
+                    right over there!</div>
+            </div>
+            <div class="button white-border"><a href="../Landing.html"> Sign up</a></div>        
+        </div>
+    </div>
 </body>
 </html>
