--- a/Landing.html
+++ b/Landing.html
@@ -65,5 +65,8 @@
             <div class="button white-border"><a href="../Landing.html"> Sign up</a></div>        
         </div>
     </div>
+    <div class="footer">
+        <div class="text-footer">Copyright &#169 The Odin Project 2021</div>
+    </div>
 </body>
 </html>
